# Mandelbrot_set

./: CMakeLists.txt  README.md
.github/workflows/: super-linter.yml
src/: main.cpp  utils.hpp
src/core/: global_config.cpp  global_config.hpp  window_dim.hpp  window_utils.hpp
src/fractal/: mandel_hip.cpp  mandel_openmp.cpp  mandel_sequential.cpp  mandelbrot.hpp
src/gl/: gl_event.cpp  gl_render.cpp  gl_shader.hpp
src/glfw/: glfw_utils.cpp  glfw_utils.hpp
src/render/: color_scheme.cpp  save_image.cpp  save_image.hpp
